2006-10-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grob-interfaces.scm (stroke-finger-interface): typo.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): idem.

	* lily/new-fingering-engraver.cc: stringFingerOrientations ->
	strokeFingerOrientations

	* lily/script-column.cc (row_before_line_breaking): also handle
	accidentals and arpeggios in horizontal script stacking.

	* lily/script-row-engraver.cc (acknowledge_accidental_placement):
	new function.

	* input/regression/script-stack-horizontal.ly: trim.

2006-10-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/output-lib.scm (stroke-finger::calc-text): allow reading of
	'text property too.

	* ly/music-functions-init.ly: rename to StrokeFingerEvent, set
	'text if string argument.

	* scm/define-grobs.scm (all-grob-descriptions): rename to StrokeFinger.

	* scm/define-context-properties.scm
	(all-user-translation-properties): change to strokeFingerOrientations

2006-10-16  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/parser.yy: remove debug output

2006-10-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/paper-defaults.ly: set left/right margin.

	* scm/paper.scm (set-paper-dimensions): use left-margin and
	right-margin for computing linewidth.

	* Documentation/topdocs/NEWS.tely (Top): idem.

	* input/regression/lyric-tie.ly (texidoc): use vowels for tied
	lyrics example.

	* scm/define-markup-commands.scm (tied-lyric): increase negative
	space: space syllables tighter.

	* VERSION (PATCH_LEVEL): bump version.

	* scm/paper.scm: patch by Arvid Gr"otting, arvidgr@gmail.com: tune
	Ax paper sizes. 

2006-10-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* COPYING: further clarification

	* VERSION: release 2.9.24

	* input/regression/script-stack-horizontal.ly: add version.

	* scm/lily-library.scm (list-join): use fold-right. Fixes #112

	* input/regression/lyric-tie.ly (texidoc): use different words.

	* mf/GNUmakefile (ALL_GEN_FILES): remove fonts.cache-1
