@@ -1,3 +1,10 @@
+2006-10-17  Erik Sandberg  <mandolaerik@gmail.com>
+	
+	* lily/recording-group-engraver.cc: removed
+
+	* lily/context.cc, lily/translator-group.cc: Don't touch
+	Context::implementation_ if it's null
+	
 2006-10-17  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* scm/define-grob-interfaces.scm (stroke-finger-interface): typo.
